apps/api/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
        - name: hello-app
          image: ttl.sh/wito-hello-app:1h
          imagePullPolicy: Always
          ports:
            - name: http-web
              containerPort: 8080

          # liveness and readiness probes are basics for most CICD
          # systems. I have not tested these endpoints, and am including
          # these as references to discuss for interview.
          livenessProbe:
            httpGet:
              path: /
              port: http-web
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: http-web
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
