apps/api/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-app
  labels:
    name: hello-app
spec:
  rules:
    - host: api.example.local
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: hello-app
                port:
                  number: 80
